Refactored Dataset into base and eegimu / Adapted from eeg/imu to inp/out

--- a/src/lstm_train/test.ipynb
+++ b/src/lstm_train/test.ipynb
@@ -10,13 +10,11 @@
    "cell_type": "code",
    "source": [
     "import torch\n",
-    "from src.imu_recon.dataset import EEGIMUDataset\n",
-    "from src.imu_recon.models import LSTMRegressor\n",
-    "from src.imu_recon.utils import plot_imu_reconstruction, reconstruct_signal\n",
-    "import matplotlib.pyplot as plt\n",
+    "from src.utils.eegimu_dataset import EEGIMUDataset\n",
+    "from src.lstm_train.models import LSTMRegressor\n",
+    "from src.utils.utils import plot_imu_reconstruction, reconstruct_signal\n",
     "from pathlib import Path\n",
     "import json\n",
-    "import pandas as pd\n",
     "\n",
     "modelname = \"run_20250607_1945\"\n",
     "weights_path = f\"../../saved_models/weights/{modelname}.pt\"\n",
@@ -128,10 +126,7 @@
     }
    },
    "cell_type": "code",
-   "source": [
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n"
-   ],
+   "source": "\n",
    "id": "64fa362c132d5f8b",
    "outputs": [
     {
